--- a/hello_world/templates/index.html
+++ b/hello_world/templates/index.html
@@ -15,7 +15,7 @@
     
     <link rel="stylesheet" href="{% static 'main.css' %}">
 </head>
-
+jimmy
 <body>
     <div class="App">
         <header class="App-header">
