--- a/hello_world/templates/index.html
+++ b/hello_world/templates/index.html
@@ -3,7 +3,7 @@
 
 <!doctype html>
 <html lang="en">
-
+teste
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
